# jupyter-analysis-tools

./: .buildinfo  .cookiecutterrc  .copier-answers.yml  .coveragerc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  Jupyter Lab.bat  Jupyter Notebook.bat  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  analysis.py  authors.html  changelog.html  conda_environment.yml  contributing.html  datalocations.py  distrib.py  genindex.html  git.py  index.html  installation.html  notebook_utils.py  objects.inv  output.json  output.txt  plotting.py  py-modindex.html  pyproject.toml  reBin.py  readPDH.py  readdata.py  readme.html  (+8 more)
.doctrees/: authors.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  readme.doctree  usage.doctree
.doctrees/reference/: index.doctree  jupyter_analysis_tools.distrib.doctree  jupyter_analysis_tools.doctree  jupyter_analysis_tools.utils.doctree
.github/workflows/: build.yml  ci-cd.yml  coverage.yml  docs.yml  release.yml  testing.yml  tests.yml
_modules/: index.html
_modules/jupyter_analysis_tools/: analysis.html  binning.html  datalocations.html  datastore.html  distrib.html  git.html  notebook_utils.html  plotting.html  ssfz2json.html  ssfz_compare.html  utils.html  widgets.html
_sources/reference/: jupyter_analysis_tools.distrib.rst.txt  jupyter_analysis_tools.utils.rst.txt
_static/: documentation_options.js
ci/: bootstrap.py  requirements.txt  set_dev_version.sh  update.py
coverage-report/: cov.json  index.html  latest.html
coverage-report/20230210_a8f6c8ae2a/: d_5d167b41016707af___init___py.html  d_5d167b41016707af_analysis_py.html  d_5d167b41016707af_datalocations_py.html  d_5d167b41016707af_distrib_py.html  d_5d167b41016707af_git_py.html  d_5d167b41016707af_notebook_utils_py.html  d_5d167b41016707af_plotting_py.html  d_5d167b41016707af_reBin_py.html  d_5d167b41016707af_readdata_py.html  d_5d167b41016707af_utils_py.html  d_5d167b41016707af_widgets_py.html  d_a44f0ac069e85531_test_jupyter_analysis_tools_py.html  index.html
coverage-report/20230216_1e173dc08a/: d_5d167b41016707af___init___py.html  d_5d167b41016707af_analysis_py.html  d_5d167b41016707af_datalocations_py.html  d_5d167b41016707af_distrib_py.html  d_5d167b41016707af_git_py.html  d_5d167b41016707af_notebook_utils_py.html  d_5d167b41016707af_plotting_py.html  d_5d167b41016707af_reBin_py.html  d_5d167b41016707af_readdata_py.html  d_5d167b41016707af_utils_py.html  d_5d167b41016707af_widgets_py.html  d_a44f0ac069e85531_test_jupyter_analysis_tools_py.html  index.html
coverage-report/20230216_5f675073bc/: d_5d167b41016707af___init___py.html  d_5d167b41016707af_analysis_py.html  d_5d167b41016707af_datalocations_py.html  d_5d167b41016707af_distrib_py.html  d_5d167b41016707af_git_py.html  d_5d167b41016707af_notebook_utils_py.html  d_5d167b41016707af_plotting_py.html  d_5d167b41016707af_reBin_py.html  d_5d167b41016707af_readdata_py.html  d_5d167b41016707af_utils_py.html  d_5d167b41016707af_widgets_py.html  d_a44f0ac069e85531_test_jupyter_analysis_tools_py.html  index.html  status.json
coverage-report/20230216_e27d159829/: d_5d167b41016707af___init___py.html  d_5d167b41016707af_analysis_py.html  d_5d167b41016707af_datalocations_py.html  d_5d167b41016707af_distrib_py.html  d_5d167b41016707af_git_py.html  d_5d167b41016707af_notebook_utils_py.html  d_5d167b41016707af_plotting_py.html  d_5d167b41016707af_reBin_py.html  d_5d167b41016707af_readdata_py.html  d_5d167b41016707af_utils_py.html  d_5d167b41016707af_widgets_py.html  d_a44f0ac069e85531_test_jupyter_analysis_tools_py.html  index.html
coverage-report/20230217_677bf0745d/: d_5d167b41016707af___init___py.html  d_5d167b41016707af_analysis_py.html  d_5d167b41016707af_datalocations_py.html  d_5d167b41016707af_distrib_py.html  d_5d167b41016707af_git_py.html  d_5d167b41016707af_notebook_utils_py.html  d_5d167b41016707af_plotting_py.html  d_5d167b41016707af_reBin_py.html  d_5d167b41016707af_readdata_py.html  d_5d167b41016707af_utils_py.html  d_5d167b41016707af_widgets_py.html  d_a44f0ac069e85531_test_jupyter_analysis_tools_py.html  index.html
coverage-report/20230217_6d2ce585f2/: d_5d167b41016707af___init___py.html  d_5d167b41016707af_analysis_py.html  d_5d167b41016707af_datalocations_py.html  d_5d167b41016707af_distrib_py.html  d_5d167b41016707af_git_py.html  d_5d167b41016707af_notebook_utils_py.html  d_5d167b41016707af_plotting_py.html  d_5d167b41016707af_reBin_py.html  d_5d167b41016707af_readdata_py.html  d_5d167b41016707af_utils_py.html  d_5d167b41016707af_widgets_py.html  d_a44f0ac069e85531_test_jupyter_analysis_tools_py.html  index.html
coverage-report/20230217_6e78a50e5b/: d_5d167b41016707af___init___py.html  d_5d167b41016707af_analysis_py.html  d_5d167b41016707af_datalocations_py.html  d_5d167b41016707af_distrib_py.html  d_5d167b41016707af_git_py.html  d_5d167b41016707af_notebook_utils_py.html  d_5d167b41016707af_plotting_py.html  d_5d167b41016707af_reBin_py.html  d_5d167b41016707af_readdata_py.html  d_5d167b41016707af_utils_py.html  d_5d167b41016707af_widgets_py.html  d_a44f0ac069e85531_test_jupyter_analysis_tools_py.html  index.html
coverage-report/20230217_8b3c7c22aa/: d_5d167b41016707af___init___py.html  d_5d167b41016707af_analysis_py.html  d_5d167b41016707af_datalocations_py.html  d_5d167b41016707af_distrib_py.html  d_5d167b41016707af_git_py.html  d_5d167b41016707af_notebook_utils_py.html  d_5d167b41016707af_plotting_py.html  d_5d167b41016707af_reBin_py.html  d_5d167b41016707af_readdata_py.html  d_5d167b41016707af_utils_py.html  d_5d167b41016707af_widgets_py.html  d_a44f0ac069e85531_test_jupyter_analysis_tools_py.html  index.html
coverage-reports/: cov.json  latest.html
docs/: conf.py  requirements.txt
reference/: index.html  jupyter_analysis_tools.distrib.html  jupyter_analysis_tools.html  jupyter_analysis_tools.utils.html
templates/: CHANGELOG.md.j2
testdata/: 2015-03-20-Silica.ssfz
tests/: readdata.py  requirements.txt  test_jupyter_analysis_tools.py  utils.py
(+1648 files in other folders)
