[build-system]
requires = [
    "setuptools>=30.3.0",
    "wheel",
]

[tool.blue]
line-length = 100
target-version = ['py37']
skip-string-normalization = true

[tool.isort]
force_single_line = true
line_length = 100
known_first_party = 'jupyter_analysis_tools'
default_section = 'THIRDPARTY'
forced_separate = 'test_jupyter_analysis_tools'
skip = ['.tox', '.eggs', 'ci/templates', 'build', 'dist', '.ipynb_checkpoints']
